feat: TASK-048 システム最適化完了
- キャッシュサービス実装 (cache_service.rs)
  - インメモリキャッシュ・TTL対応
  - パターンベース無効化・自動クリーンアップ
  - キャッシュキー管理・統計機能

- 設定管理システム実装 (config/mod.rs)
  - 階層設定ファイル対応・環境変数統合
  - 設定検証・動的更新機能
  - 開発/本番環境自動判定

- メトリクス・監視サービス実装 (metrics_service.rs)
  - リアルタイムシステム監視
  - API・DB・キャッシュパフォーマンス測定
  - ヘルスチェック・アラート機能

- データベース最適化サービス実装 (database_optimizer.rs)
  - スロークエリ検出・分析
  - 自動インデックス推奨
  - テーブル統計・最適化提案

- 監視API エンドポイント実装 (handlers/monitoring.rs)
  - ヘルスチェック・準備性確認
  - メトリクス・キャッシュ統計API
  - 最適化レポート・実行API

- 包括的エラーハンドリング・型安全性向上
- 設定管理依存性追加 (config = "0.14.1")

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,6 +52,9 @@ tokio-cron-scheduler = "0.14.0"
 # For backup compression
 flate2 = "1.0"
 
+# Configuration management
+config = "0.14.1"
+
 [dev-dependencies]
 # Testing
 tokio-test = "0.4.4"
